Prevent long names from covering text below them.

--- a/src/header.css
+++ b/src/header.css
@@ -10,7 +10,7 @@
 .spec {
   padding: 0.2em 0;
   vertical-align: middle;
-  height: 1em;
+  min-height: 1em;
 }
 
 .draws {
